force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ACV__c.field-meta.xml
<CustomField>
        <fullName>ACV__c</fullName>
        <formula>if(Disable_Proration__c = True, SBQQ__NetTotal__c/SBQQ__ProrateMultiplier__c, (SBQQ__NetTotal__c / SBQQ__ProrateMultiplier__c) / (SBQQ__DefaultSubscriptionTerm__c / 12))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ACV</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </CustomField>