force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Add_On_Query_Count__c.field-meta.xml
<CustomField>
    <fullName>Add_On_Query_Count__c</fullName>
    <description>Formula field used to display only net new or existing quote lines with quantity increases.</description>
    <formula>IF(
  OR(
    SBQQ__Quantity__c - SBQQ__PriorQuantity__c &gt; 0,
    SBQQ__RequiredBy__c = &quot;&quot;
  ),
  &quot;1&quot;,
  &quot;0&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Formula field used to display only net new or existing quote lines with quantity increases.</inlineHelpText>
    <label>Add On Query Count</label>
    <type>Text</type>
</CustomField>