force-app/main/default/objects/SBQQ__QuoteLine__c/fields/AdditionalDiscountUnit__c.field-meta.xml
<CustomField>
        <fullName>AdditionalDiscountUnit__c</fullName>
        <label>Discount Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Percent</fullName>
                </value>
                <value>
                    <fullName>Amount</fullName>
                </value>
                <value>
                    <fullName>Unit Override</fullName>
                </value>
                <value>
                    <fullName>Total Override</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>