force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Amended_Bundle__c.field-meta.xml
<CustomField>
        <fullName>Amended_Bundle__c</fullName>
        <description>Used to show specific bundles on the Add On output doc</description>
        <inlineHelpText>Used to show specific bundles on the Add On output doc</inlineHelpText>
        <label>Amended Bundle</label>
        <length>2</length>
        <type>Text</type>
    </CustomField>