force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Annual_Recurring_Revenue__c.field-meta.xml
<CustomField>
    <fullName>Annual_Recurring_Revenue__c</fullName>
    <formula>IF(true
				/*
  TEXT(
						
						SBQQ__Product__r.CPQ_Revenue_Type__c) = &quot;RLF&quot;
						*/,
  (SBQQ__NetTotal__c / SBQQ__ProrateMultiplier__c) / (SBQQ__DefaultSubscriptionTerm__c / 12),
  0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Annual Recurring Revenue</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>