force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Approval_Discount__c.field-meta.xml
<CustomField>
    <fullName>Approval_Discount__c</fullName>
    <formula>IF (SBQQ__AdditionalDiscountAmount__c &lt;&gt; 0.00, 
SBQQ__AdditionalDiscountAmount__c / SBQQ__RegularPrice__c, 
SBQQ__Discount__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Approval Discount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>