force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Billing_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Billing_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>RUBX-1441 need to attached billing schedule to quote line</description>
    <label>Billing Schedule</label>
    <referenceTo>Billing_Schedule__c</referenceTo>
    <relationshipLabel>Quote Lines</relationshipLabel>
    <relationshipName>Quote_Lines</relationshipName>
    <type>Lookup</type>
</CustomField>