force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Block_Price_Product__c.field-meta.xml
<CustomField>
        <fullName>Block_Price_Product__c</fullName>
        <description>Pulls the product&apos;s original Pricing Method from the Product record. Used for Price Rule updates.</description>
        <formula>IF(ISPICKVAL(SBQQ__Product__r.SBQQ__PricingMethod__c, &quot;Block&quot;), TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Pulls the product&apos;s original Pricing Method from the Product record. Used in automation.</inlineHelpText>
        <label>Block Price Product?</label>
        <type>Checkbox</type>
    </CustomField>