force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Discount_Percentage__c.field-meta.xml
<CustomField>
        <fullName>Bundle_Discount_Percentage__c</fullName>
        <description>Total bundle discount as a percentage, used for RPA approvals</description>
        <inlineHelpText>Total bundle discount as a percentage, used for RPA approvals</inlineHelpText>
        <label>Bundle Discount Percentage</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </CustomField>