force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Name__c.field-meta.xml
<CustomField>
        <fullName>Bundle_Name__c</fullName>
        <description>Used to set the Bundle Name equal to the Required By Product on the Quote Line</description>
        <inlineHelpText>Used to set the Bundle Name equal to the Required By Product on the Quote Line</inlineHelpText>
        <label>Bundle Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>