force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Bundle_Product__c.field-meta.xml
<CustomField>
        <fullName>Bundle_Product__c</fullName>
        <formula>SBQQ__Product__r.Bundle2__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Bundle Product</label>
        <type>Checkbox</type>
    </CustomField>