force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Business_Area__c.field-meta.xml
<CustomField>
        <fullName>Business_Area__c</fullName>
        <formula>SBQQ__Product__r.Business_Area__c</formula>
        <label>Business Area</label>
        <type>Text</type>
    </CustomField>