force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CM_Discount__c.field-meta.xml
<CustomField>
        <fullName>CM_Discount__c</fullName>
        <description>CM Discount amount. Summed at the Quote level.</description>
        <label>CM Discount $</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>