force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Cost_Percentage__c.field-meta.xml
<CustomField>
        <fullName>Cost_Percentage__c</fullName>
        <description>Cost percentage for certain services products. Copied from Product record.</description>
        <inlineHelpText>Cost percentage for certain services products. Copied from Product record.</inlineHelpText>
        <label>Cost Percentage</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </CustomField>