force-app/main/default/objects/SBQQ__QuoteLine__c/fields/CPQ_Revenue_Type__c.field-meta.xml
<CustomField>
        <fullName>CPQ_Revenue_Type__c</fullName>
        <label>CPQ Revenue Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bundle</fullName>
                </value>
                <value>
                    <fullName>Hardware</fullName>
                </value>
                <value>
                    <fullName>ILF</fullName>
                </value>
                <value>
                    <fullName>Null</fullName>
                </value>
                <value>
                    <fullName>RLF</fullName>
                </value>
                <value>
                    <fullName>Services Fixed Price</fullName>
                </value>
                <value>
                    <fullName>Finastra Hosted SingleT Separable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>