force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Currency_Conversion_Applied__c.field-meta.xml
<CustomField>
        <fullName>Currency_Conversion_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if the Quote Line has been converted from Usd.</description>
        <inlineHelpText>Checkbox to indicate if the Quote Line has been converted from Usd.</inlineHelpText>
        <label>Currency Conversion Applied</label>
        <type>Checkbox</type>
    </CustomField>