force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Currency_Margin__c.field-meta.xml
<CustomField>
    <fullName>Currency_Margin__c</fullName>
    <formula>SBQQ__NetPrice__c - (GS_Cost__c + External_Cost__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>