force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Schedule_ID__c.field-meta.xml
<CustomField>
        <fullName>Discount_Schedule_ID__c</fullName>
        <formula>SBQQ__DiscountSchedule__r.Id</formula>
        <inlineHelpText>Displays the Discount Schedule lookup&apos;s record ID</inlineHelpText>
        <label>Discount Schedule ID</label>
        <type>Text</type>
    </CustomField>