force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discount_Tier_Table__c.field-meta.xml
<CustomField>
        <fullName>Discount_Tier_Table__c</fullName>
        <label>Discount Tier Table</label>
        <length>131072</length>
        <type>Html</type>
    </CustomField>