force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Discounts_Enabled_SOSS__c.field-meta.xml
<CustomField>
    <fullName>Discounts_Enabled_SOSS__c</fullName>
    <description>This field determines if a SOSS User has made it discountable</description>
    <formula>IF( ($Profile.Name == &#39;SOSS User&#39;) &amp;&amp; (SBQQ__Quote__r.Override_Non_Discountable_Services__c == true),true,false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounts Enabled SOSS</label>
    <type>Checkbox</type>
</CustomField>