force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Effective_Quant__c.field-meta.xml
<CustomField>
        <fullName>Effective_Quant__c</fullName>
        <formula>SBQQ__EffectiveQuantity__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Effective Quant</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>