force-app/main/default/objects/SBQQ__QuoteLine__c/fields/External_Cost__c.field-meta.xml
<CustomField>
    <fullName>External_Cost__c</fullName>
    <label>External Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>