force-app/main/default/objects/SBQQ__QuoteLine__c/fields/External_SKU_DH__c.field-meta.xml
<CustomField>
        <fullName>External_SKU_DH__c</fullName>
        <label>External SKU DH</label>
        <length>250</length>
        <type>Text</type>
    </CustomField>