force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Fair_Value__c.field-meta.xml
<CustomField>
    <fullName>Fair_Value__c</fullName>
    <description>This field holds the Fair Value.</description>
    <inlineHelpText>This field holds the Fair Value.</inlineHelpText>
    <label>Fair Value</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>