force-app/main/default/objects/SBQQ__QuoteLine__c/fields/GS_Cost__c.field-meta.xml
<CustomField>
        <fullName>GS_Cost__c</fullName>
        <inlineHelpText>Used to twin from the GS Cost Product2 field.</inlineHelpText>
        <label>GS Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </CustomField>