force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Is_Existing__c.field-meta.xml
<CustomField>
        <fullName>Is_Existing__c</fullName>
        <description>Used to determine whether a quote line on amendment is a previous existing product.</description>
        <formula>SBQQ__Existing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Used to determine whether a quote line on amendment is a previous existing product.</inlineHelpText>
        <label>Is Existing</label>
        <type>Checkbox</type>
    </CustomField>