force-app/main/default/objects/SBQQ__QuoteLine__c/fields/License_Metric_Filter__c.field-meta.xml
<CustomField>
        <fullName>License_Metric_Filter__c</fullName>
        <label>License Metric Filter</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>License_Metrics</valueSetName>
        </valueSet>
    </CustomField>