force-app/main/default/objects/SBQQ__QuoteLine__c/fields/List_Price_After_BR__c.field-meta.xml
<CustomField>
        <fullName>List_Price_After_BR__c</fullName>
        <description>Store the list price after the Budget has been applied using the QCP logic.</description>
        <inlineHelpText>Store the list price after the Budget has been applied using the QCP logic.</inlineHelpText>
        <label>List Price After BR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>