force-app/main/default/objects/SBQQ__QuoteLine__c/fields/LM_QTY_1__c.field-meta.xml
<CustomField>
        <fullName>LM_QTY_1__c</fullName>
        <label>LM QTY 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>