force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Minimum_Commitment_Quantity__c.field-meta.xml
<CustomField>
        <fullName>Minimum_Commitment_Quantity__c</fullName>
        <label>Minimum Commitment Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>