force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Monthly_Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Monthly_Unit_Price__c</fullName>
    <formula>IF(TEXT(SBQQ__SubscriptionType__c)!= &quot;One-time&quot; &amp;&amp; Disable_Proration__c == false, SBQQ__RegularPrice__c /(SBQQ__DefaultSubscriptionTerm__c*SBQQ__ProrateMultiplier__c), 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Monthly Unit Price</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>