force-app/main/default/objects/SBQQ__QuoteLine__c/fields/MortgageBot_Pricing__c.field-meta.xml
<CustomField>
    <fullName>MortgageBot_Pricing__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is True, the product contains MortgageBot unique pricing.</description>
    <inlineHelpText>When this field is True, the product contains MortgageBot unique pricing.</inlineHelpText>
    <label>MortgageBot Pricing</label>
    <type>Checkbox</type>
</CustomField>