force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Net_Price_After_PCR__c.field-meta.xml
<CustomField>
        <fullName>Net_Price_After_PCR__c</fullName>
        <description>Store the net price after the Price Conversion Rate has been applied using the QCP logic.</description>
        <inlineHelpText>Store the net price after the Price Conversion Rate has been applied using the QCP logic.</inlineHelpText>
        <label>Net Price After PCR</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>