force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_GS_Cost__c.field-meta.xml
<CustomField>
        <fullName>Non_GS_Cost__c</fullName>
        <description>This field contains the cost associated to Non-Global Services products. This is copied from the Product record.</description>
        <inlineHelpText>This field contains the cost associated to Non-Global Services products. This is copied from the Product record.</inlineHelpText>
        <label>Non-GS Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </CustomField>