force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Non_Standard_Payment_Term_Services__c.field-meta.xml
<CustomField>
        <fullName>Non_Standard_Payment_Term_Services__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Non Standard Payment Term - Services</label>
        <type>Checkbox</type>
    </CustomField>