force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NonDiscountable_Reset__c.field-meta.xml
<CustomField>
    <fullName>NonDiscountable_Reset__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only used in QCP code to reset the non discountable checkbox on quote lines</description>
    <label>Non Discountable Reset</label>
    <type>Checkbox</type>
</CustomField>