force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_3PP_Vendor_ID__c.field-meta.xml
<CustomField>
        <fullName>NS_3PP_Vendor_ID__c</fullName>
        <label>NS 3PP Vendor ID</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>