force-app/main/default/objects/SBQQ__QuoteLine__c/fields/NS_3PP_Vendor_Name__c.field-meta.xml
<CustomField>
        <fullName>NS_3PP_Vendor_Name__c</fullName>
        <label>NS 3PP Vendor Name</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>