force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Parent_Product__c.field-meta.xml
<CustomField>
    <fullName>Parent_Product__c</fullName>
    <formula>IF(
  ISBLANK(SBQQ__RequiredBy__c),
  SBQQ__ProductName__c,
  SBQQ__RequiredBy__r.SBQQ__ProductName__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parent Product</label>
    <type>Text</type>
</CustomField>