force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Percent_Margin__c.field-meta.xml
<CustomField>
    <fullName>Percent_Margin__c</fullName>
    <formula>1-((GS_Cost__c +  External_Cost__c) / SBQQ__NetPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Margin (%)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>