force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Phoenix_Contract_Term_Display__c.field-meta.xml
<CustomField>
    <fullName>Phoenix_Contract_Term_Display__c</fullName>
    <description>Used to display correct Contract Term text on the output doc.</description>
    <formula>IF(
  CONTAINS(External_SKU_DH__c, &quot;PX&quot;),
  Bundle_Name__c &amp; &quot; - &quot; &amp; TEXT(SBQQ__SubscriptionTerm__c) &amp; &#39; Month Term&#39;,
  Bundle_Name__c &amp; &#39; - from Live date and matches current Core Processing term above.&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Used to display correct Contract Term text on the output doc.</inlineHelpText>
    <label>Phoenix Contract Term Display</label>
    <type>Text</type>
</CustomField>