force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Phoenix_Contract_Term_Text__c.field-meta.xml
<CustomField>
        <fullName>Phoenix_Contract_Term_Text__c</fullName>
        <label>Phoenix Contract Term Text</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>