force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Price_Is_Editable__c.field-meta.xml
<CustomField>
        <fullName>Price_Is_Editable__c</fullName>
        <formula>SBQQ__PriceEditable__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Price Is Editable</label>
        <type>Checkbox</type>
    </CustomField>