force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Pricing_Tier__c.field-meta.xml
<CustomField>
        <fullName>Pricing_Tier__c</fullName>
        <description>Pricing tier for the given product</description>
        <inlineHelpText>Pricing tier for the given product</inlineHelpText>
        <label>Pricing Tier</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tier 1</fullName>
                </value>
                <value>
                    <fullName>Tier 2</fullName>
                </value>
                <value>
                    <fullName>Tier 3</fullName>
                </value>
                <value>
                    <fullName>Tier 4</fullName>
                </value>
                <value>
                    <fullName>Tier 5</fullName>
                </value>
                <value>
                    <fullName>Tier 6</fullName>
                </value>
                <value>
                    <fullName>Tier 7</fullName>
                </value>
                <value>
                    <fullName>Tier 8</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>