force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Product_Notes__c.field-meta.xml
<CustomField>
        <fullName>Product_Notes__c</fullName>
        <description>Used to populate the Bundle Header with children&apos;s Prod2 Static_Notes__c</description>
        <inlineHelpText>Used to populate the Bundle Header with children&apos;s Prod2 Static_Notes__c</inlineHelpText>
        <label>Product Notes</label>
        <length>131072</length>
        <type>Html</type>
    </CustomField>