force-app/main/default/objects/SBQQ__QuoteLine__c/fields/ProductCode__c.field-meta.xml
<CustomField>
        <fullName>ProductCode__c</fullName>
        <label>Product Code</label>
        <length>18</length>
        <type>Text</type>
    </CustomField>