force-app/main/default/objects/SBQQ__QuoteLine__c/fields/QL_Matches_Quote_End_Date__c.field-meta.xml
<CustomField>
        <fullName>QL_Matches_Quote_End_Date__c</fullName>
        <formula>if((NOT(ISBLANK(SBQQ__Quote__r.SBQQ__EndDate__c)) &amp;&amp; SBQQ__EndDate__c-SBQQ__Quote__r.SBQQ__EndDate__c &lt;= 0 &amp;&amp; TEXT(SBQQ__Quote__r.SBQQ__Type__c) = &quot;Amendment&quot;) || TEXT(SBQQ__Quote__r.SBQQ__Status__c) = &quot;Quote&quot; || ISBLANK(SBQQ__EndDate__c),True, False)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>QL Matches Quote End Date</label>
        <type>Checkbox</type>
    </CustomField>