force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Quote_Line_Type__c.field-meta.xml
<CustomField>
    <fullName>Quote_Line_Type__c</fullName>
    <formula>IF(OR(NOT(ISBLANK(SBQQ__RenewedSubscription__c)), NOT(ISBLANK(SBQQ__RenewedAsset__c))), &quot;Renewal&quot;, 
IF(SBQQ__Quantity__c &lt;&gt; SBQQ__EffectiveQuantity__c, 
IF(SBQQ__EffectiveQuantity__c &lt; 0, &quot;Decommission&quot;, 
IF(SBQQ__EffectiveQuantity__c &gt; 0, &quot;Amendment&quot;, 
&quot;Amendment&quot;)), 
&quot;New&quot;) 
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quote Line Type</label>
    <type>Text</type>
</CustomField>