force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Renewal_Line_Discount_Reset__c.field-meta.xml
<CustomField>
        <fullName>Renewal_Line_Discount_Reset__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Set to True after the Discount is removed from the Renewed Quote Line</description>
        <inlineHelpText>Set to True after the Discount is removed from the Renewed Quote Line</inlineHelpText>
        <label>Renewal Line Discount Reset</label>
        <type>Checkbox</type>
    </CustomField>