force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Required_By_Bundle__c.field-meta.xml
<CustomField>
    <fullName>Required_By_Bundle__c</fullName>
    <formula>IF(
ISBLANK(SBQQ__RequiredBy__c),
SBQQ__ProductName__c,
SBQQ__RequiredBy__r.SBQQ__ProductName__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Required By Bundle</label>
    <type>Text</type>
</CustomField>