force-app/main/default/objects/SBQQ__QuoteLine__c/fields/Requires_Clone__c.field-meta.xml
<CustomField>
        <fullName>Requires_Clone__c</fullName>
        <formula>IMAGE(if(Uplift_Factor__c == 1 || !ISBLANK(SBQQ__Source__c), &quot;/img/samples/light_green.gif&quot;, &quot;/img/samples/light_red.gif&quot;), &quot;Status&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Requires Clone</label>
        <type>Text</type>
    </CustomField>