force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RPA_Threshold__c.field-meta.xml
<CustomField>
        <fullName>RPA_Threshold__c</fullName>
        <inlineHelpText>Pulls RPA Threshold and stamps maximum value.</inlineHelpText>
        <label>RPA Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </CustomField>