force-app/main/default/objects/SBQQ__QuoteLine__c/fields/RPA_Threshold_Exceeded__c.field-meta.xml
<CustomField>
        <fullName>RPA_Threshold_Exceeded__c</fullName>
        <formula>If(RPA_Threshold__c &lt;&gt; 0, Bundle_Discount_Percentage__c &gt;= RPA_Threshold__c, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RPA Threshold Exceeded</label>
        <type>Checkbox</type>
    </CustomField>